--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost/fotograf
+spring.datasource.url=jdbc:mysql://localhost:3306/fotograf
 spring.datasource.username=root
-spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto = update
