--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -5,3 +5,4 @@ Size.userForm.password=Password must be over 8 characters.
 Different.userForm.password=Password don't match.
 Size.albumForm.name=Name must be between 3 and 255 characters
 Duplicate.albumForm.name=Album already exists
+Value.scoreForm.incorrectRange=Score should be value between 0 and 10
