--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -6,3 +6,4 @@ Different.userForm.password=Password don't match.
 Size.albumForm.name=Name must be between 3 and 255 characters
 Duplicate.albumForm.name=Album already exists
 Value.scoreForm.incorrectRange=Score should be value between 0 and 10
+Description.commentForm.tooShort=Your comment should be longer than 10 characters
