--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -7,3 +7,6 @@ Size.albumForm.name=Name must be between 3 and 255 characters
 Duplicate.albumForm.name=Album already exists
 Value.scoreForm.incorrectRange=Score should be value between 0 and 10
 Description.commentForm.tooShort=Your comment should be longer than 10 characters
+PhotoFile.pictureForm.Empty=You have to choose a photo
+PhotoFile.pictureForm.Size=File is too large
+PhotoFile.pictureForm.Type=This file format is not supported, upload JPEG or PNG file
