--- a/pom.xml
+++ b/pom.xml
@@ -105,10 +105,9 @@
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <groupId>cz.jirutka.rsql</groupId>
+      <artifactId>rsql-parser</artifactId>
+      <version>2.0.0</version>
     </dependency>
   </dependencies>
   <build>
