--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,27 @@
       <artifactId>rsql-parser</artifactId>
       <version>2.0.0</version>
     </dependency>
+
+    <!--<dependency>-->
+      <!--<groupId>org.codehaus.jackson</groupId>-->
+      <!--<artifactId>jackson-mapper-asl</artifactId>-->
+      <!--<version>1.9.12</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.codehaus.jackson</groupId>-->
+      <!--<artifactId>jackson-jaxrs</artifactId>-->
+      <!--<version>1.9.12</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>org.codehaus.jackson</groupId>-->
+      <!--<artifactId>jackson-core-asl</artifactId>-->
+      <!--<version>1.9.12</version>-->
+    <!--</dependency>-->
+    <!--<dependency>-->
+      <!--<groupId>com.fasterxml.jackson.core</groupId>-->
+      <!--<artifactId>jackson-databind</artifactId>-->
+      <!--<version>2.5.0</version>-->
+    <!--</dependency>-->
   </dependencies>
   <build>
     <finalName>Fotograf</finalName>
