Zamówienia: create, view, list

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -10,3 +10,7 @@ Description.commentForm.tooShort=Your comment should be longer than 10 character
 PhotoFile.pictureForm.Empty=You have to choose a photo
 PhotoFile.pictureForm.Size=File is too large
 PhotoFile.pictureForm.Type=This file format is not supported, upload JPEG or PNG file
+OrderForm.hoursLimit=Hours should be a value between 1 and 168
+OrderForm.descriptionLength=Description should be between 0 and 255 characters
+OrderForm.terminWykonaniaNull=You should choose a date for your order
+OrderForm.terminWykonaniaBeforeNow=You should choose a date in the future
