--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -2,3 +2,4 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/fotograf
 jdbc.username=root
 jdbc.password=root
+jdbc.connectionProperties="useUnicode=yes;characterEncoding=utf8;"
